# engram-cloud

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  agent_catalog.py  auth.py  config.py  db.py  engram_service.py  hardening.py  main.py  models.py  security.py
app/templates/: agents.html  api_explorer.html  architecture.html  base.html  capabilities.html  changelog.html  connect.html  dashboard.html  docs.html  error.html  examples.html  integrations.html  invite.html  landing.html  login.html  not_found.html  operations.html  pricing.html  sdks.html  security.html  status.html  use_cases.html  workspace.html
docs/: deployment.md
scripts/: deploy.sh  live-check.sh
tests/: test_public_routes.py  test_security.py  test_slugify.py  test_workspace_flow.py
