[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engram-cloud"
version = "0.2.0"
description = "Hosted multi-workspace service layer for Engram"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
classifiers = [
  "License :: Other/Proprietary License",
]
dependencies = [
  "engram-memory-system>=0.5.2",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "authlib>=1.3.1",
  "httpx>=0.27.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.0",
  "itsdangerous>=2.2.0",
  "pydantic-settings>=2.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
filterwarnings = [
  "error",
  "ignore:authlib.jose module is deprecated.*:authlib.deprecate.AuthlibDeprecationWarning",
]
